packages/graj-lang/graj-lang-2.0.1.tar.gz/graj-lang-2.0.1/blended/lint/blended_grammar/py2/blendedParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from ..blendedParserListener import blendedParserListener
else:
    from blendedParserListener import blendedParserListener

class blendedParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'{% raw %}'", u"'{#'", u"'{%'", u"<INVALID>", 
                     u"'.'", u"'}}'", u"'#{'", u"<INVALID>", u"'in'", u"'and'", 
                     u"'or'", u"'not'", u"'ignore missing'", u"'with'", 
                     u"'only'", u"'block'", u"'parent'", u"'endblock'", 
                     u"'include'", u"'extends'", u"'set'", u"'print'", u"'for'", 
                     u"'endfor'", u"'macro'", u"'endmacro'", u"'do'", u"'if'", 
                     u"'else'", u"'endif'", u"'items'", u"'comment'", u"'endcomment'", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"'{% endraw %}'", 
                     u"'#}'", u"'|e'", u"'|items'", u"'%}'", u"'\"'", u"'''", 
                     u"'('", u"')'", u"'{'", u"'}'", u"'['", u"']'", u"','", 
                     u"'&'", u"'\\'", u"<INVALID>", u"';'", u"'|'", u"'!'", 
                     u"'@'", u"'#'", u"'='", u"':'", u"'=='", u"'!='", u"'>'", 
                     u"'<'", u"'<='", u"'>='", u"'+'", u"'-'", u"'*'", u"<INVALID>", 
                     u"'^'", u"'%'" ]

    symbolicNames = [ u"<INVALID>", u"RAW", u"LCOM", u"LTAG", u"LREN", u"DOT", 
                      u"RREN", u"TWIG", u"ID", u"IN", u"AND", u"OR", u"NOT", 
                      u"IGNORE", u"WITH", u"ONLY", u"BLOCK", u"PARENT", 
                      u"ENDBLOCK", u"INCLUDE", u"EXTENDS", u"SET", u"PRINT", 
                      u"FOR", u"ENDFOR", u"MACRO", u"ENDMACRO", u"DO", u"IF", 
                      u"ELSE", u"ENDIF", u"ITEMS", u"COMMENT", u"ENDCOMMENT", 
                      u"TEXT", u"WS", u"NEWLINE", u"ENDRAW", u"RCOM", u"EFILTER", 
                      u"IFILTER", u"RTAG", u"QUOTE", u"APO", u"LPAREN", 
                      u"RPAREN", u"LBRACE", u"RBRACE", u"LBRACK", u"RBRACK", 
                      u"COMMA", u"AMP", u"BSLASH", u"FSLASH", u"SEMI", u"PIPE", 
                      u"EXCL", u"AT", u"POUND", u"ASSIGN", u"COLON", u"EQUAL", 
                      u"NOTEQUAL", u"GT", u"LT", u"LE", u"GE", u"ADD", u"SUB", 
                      u"MUL", u"DIV", u"CARET", u"MOD" ]

    RULE_start = 0
    RULE_blendedBlock = 1
    RULE_blendedBlockParent = 2
    RULE_blended = 3
    RULE_blendedNoSet = 4
    RULE_blockStatementWithParent = 5
    RULE_blockStatement = 6
    RULE_extendsStatement = 7
    RULE_commentStatement = 8
    RULE_comStatement = 9
    RULE_rawStatement = 10
    RULE_includeStatement = 11
    RULE_setStatement = 12
    RULE_macroStatement = 13
    RULE_ifStatement = 14
    RULE_printStatement = 15
    RULE_forStatement = 16
    RULE_doStatement = 17
    RULE_renderStatement = 18
    RULE_forTag = 19
    RULE_forItemsTag = 20
    RULE_endForTag = 21
    RULE_blockTag = 22
    RULE_endblockTag = 23
    RULE_parentTag = 24
    RULE_macroTag = 25
    RULE_endmacroTag = 26
    RULE_ifTag = 27
    RULE_elseTag = 28
    RULE_endifTag = 29
    RULE_commentTag = 30
    RULE_endcommentTag = 31
    RULE_pathString = 32
    RULE_path = 33
    RULE_setVar = 34
    RULE_expression = 35
    RULE_attributeVariable = 36
    RULE_stringVar = 37
    RULE_identifier = 38
    RULE_text = 39

    ruleNames =  [ u"start", u"blendedBlock", u"blendedBlockParent", u"blended", 
                   u"blendedNoSet", u"blockStatementWithParent", u"blockStatement", 
                   u"extendsStatement", u"commentStatement", u"comStatement", 
                   u"rawStatement", u"includeStatement", u"setStatement", 
                   u"macroStatement", u"ifStatement", u"printStatement", 
                   u"forStatement", u"doStatement", u"renderStatement", 
                   u"forTag", u"forItemsTag", u"endForTag", u"blockTag", 
                   u"endblockTag", u"parentTag", u"macroTag", u"endmacroTag", 
                   u"ifTag", u"elseTag", u"endifTag", u"commentTag", u"endcommentTag", 
                   u"pathString", u"path", u"setVar", u"expression", u"attributeVariable", 
                   u"stringVar", u"identifier", u"text" ]

    EOF = Token.EOF
    RAW=1
    LCOM=2
    LTAG=3
    LREN=4
    DOT=5
    RREN=6
    TWIG=7
    ID=8
    IN=9
    AND=10
    OR=11
    NOT=12
    IGNORE=13
    WITH=14
    ONLY=15
    BLOCK=16
    PARENT=17
    ENDBLOCK=18
    INCLUDE=19
    EXTENDS=20
    SET=21
    PRINT=22
    FOR=23
    ENDFOR=24
    MACRO=25
    ENDMACRO=26
    DO=27
    IF=28
    ELSE=29
    ENDIF=30
    ITEMS=31
    COMMENT=32
    ENDCOMMENT=33
    TEXT=34
    WS=35
    NEWLINE=36
    ENDRAW=37
    RCOM=38
    EFILTER=39
    IFILTER=40
    RTAG=41
    QUOTE=42
    APO=43
    LPAREN=44
    RPAREN=45
    LBRACE=46
    RBRACE=47
    LBRACK=48
    RBRACK=49
    COMMA=50
    AMP=51
    BSLASH=52
    FSLASH=53
    SEMI=54
    PIPE=55
    EXCL=56
    AT=57
    POUND=58
    ASSIGN=59
    COLON=60
    EQUAL=61
    NOTEQUAL=62
    GT=63
    LT=64
    LE=65
    GE=66
    ADD=67
    SUB=68
    MUL=69
    DIV=70
    CARET=71
    MOD=72

    def __init__(self, input):
        super(blendedParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(blendedParser.EOF, 0)

        def extendsStatement(self):
            return self.getTypedRuleContext(blendedParser.ExtendsStatementContext,0)


        def blendedBlock(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(blendedParser.BlendedBlockContext)
            else:
                return self.getTypedRuleContext(blendedParser.BlendedBlockContext,i)


        def blockStatementWithParent(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(blendedParser.BlockStatementWithParentContext)
            else:
                return self.getTypedRuleContext(blendedParser.BlockStatementWithParentContext,i)


        def getRuleIndex(self):
            return blendedParser.RULE_start

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterStart(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitStart(self)




    def start(self):

        localctx = blendedParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 80
                self.extendsStatement()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==blendedParser.LTAG:
                    self.state = 81
                    self.blockStatementWithParent()
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << blendedParser.RAW) | (1 << blendedParser.LCOM) | (1 << blendedParser.LTAG) | (1 << blendedParser.LREN))) != 0):
                    self.state = 87
                    self.blendedBlock()
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


            self.state = 95
            self.match(blendedParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlendedBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.BlendedBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def blended(self):
            return self.getTypedRuleContext(blendedParser.BlendedContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(blendedParser.BlockStatementContext,0)


        def getRuleIndex(self):
            return blendedParser.RULE_blendedBlock

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterBlendedBlock(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitBlendedBlock(self)




    def blendedBlock(self):

        localctx = blendedParser.BlendedBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_blendedBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 97
                self.blended()
                pass

            elif la_ == 2:
                self.state = 98
                self.blockStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlendedBlockParentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.BlendedBlockParentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def blended(self):
            return self.getTypedRuleContext(blendedParser.BlendedContext,0)


        def blockStatementWithParent(self):
            return self.getTypedRuleContext(blendedParser.BlockStatementWithParentContext,0)


        def getRuleIndex(self):
            return blendedParser.RULE_blendedBlockParent

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterBlendedBlockParent(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitBlendedBlockParent(self)




    def blendedBlockParent(self):

        localctx = blendedParser.BlendedBlockParentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blendedBlockParent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 101
                self.blended()
                pass

            elif la_ == 2:
                self.state = 102
                self.blockStatementWithParent()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlendedContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.BlendedContext, self).__init__(parent, invokingState)
            self.parser = parser

        def includeStatement(self):
            return self.getTypedRuleContext(blendedParser.IncludeStatementContext,0)


        def setStatement(self):
            return self.getTypedRuleContext(blendedParser.SetStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(blendedParser.PrintStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(blendedParser.ForStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(blendedParser.IfStatementContext,0)


        def macroStatement(self):
            return self.getTypedRuleContext(blendedParser.MacroStatementContext,0)


        def doStatement(self):
            return self.getTypedRuleContext(blendedParser.DoStatementContext,0)


        def rawStatement(self):
            return self.getTypedRuleContext(blendedParser.RawStatementContext,0)


        def renderStatement(self):
            return self.getTypedRuleContext(blendedParser.RenderStatementContext,0)


        def comStatement(self):
            return self.getTypedRuleContext(blendedParser.ComStatementContext,0)


        def commentStatement(self):
            return self.getTypedRuleContext(blendedParser.CommentStatementContext,0)


        def getRuleIndex(self):
            return blendedParser.RULE_blended

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterBlended(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitBlended(self)




    def blended(self):

        localctx = blendedParser.BlendedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_blended)
        try:
            self.state = 116
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.includeStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.setStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.printStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.forStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.ifStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 110
                self.macroStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 111
                self.doStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 112
                self.rawStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 113
                self.renderStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 114
                self.comStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 115
                self.commentStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlendedNoSetContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.BlendedNoSetContext, self).__init__(parent, invokingState)
            self.parser = parser

        def includeStatement(self):
            return self.getTypedRuleContext(blendedParser.IncludeStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(blendedParser.PrintStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(blendedParser.ForStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(blendedParser.IfStatementContext,0)


        def macroStatement(self):
            return self.getTypedRuleContext(blendedParser.MacroStatementContext,0)


        def doStatement(self):
            return self.getTypedRuleContext(blendedParser.DoStatementContext,0)


        def rawStatement(self):
            return self.getTypedRuleContext(blendedParser.RawStatementContext,0)


        def renderStatement(self):
            return self.getTypedRuleContext(blendedParser.RenderStatementContext,0)


        def comStatement(self):
            return self.getTypedRuleContext(blendedParser.ComStatementContext,0)


        def commentStatement(self):
            return self.getTypedRuleContext(blendedParser.CommentStatementContext,0)


        def getRuleIndex(self):
            return blendedParser.RULE_blendedNoSet

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterBlendedNoSet(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitBlendedNoSet(self)




    def blendedNoSet(self):

        localctx = blendedParser.BlendedNoSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_blendedNoSet)
        try:
            self.state = 128
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.includeStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.printStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.forStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.ifStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.macroStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 123
                self.doStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 124
                self.rawStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 125
                self.renderStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 126
                self.comStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 127
                self.commentStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockStatementWithParentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.BlockStatementWithParentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def blockTag(self):
            return self.getTypedRuleContext(blendedParser.BlockTagContext,0)


        def endblockTag(self):
            return self.getTypedRuleContext(blendedParser.EndblockTagContext,0)


        def parentTag(self):
            return self.getTypedRuleContext(blendedParser.ParentTagContext,0)


        def blendedBlockParent(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(blendedParser.BlendedBlockParentContext)
            else:
                return self.getTypedRuleContext(blendedParser.BlendedBlockParentContext,i)


        def getRuleIndex(self):
            return blendedParser.RULE_blockStatementWithParent

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterBlockStatementWithParent(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitBlockStatementWithParent(self)




    def blockStatementWithParent(self):

        localctx = blendedParser.BlockStatementWithParentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blockStatementWithParent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.blockTag()
            self.state = 132
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 131
                self.parentTag()


            self.state = 137
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 134
                    self.blendedBlockParent() 
                self.state = 139
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 140
            self.endblockTag()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockStatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.BlockStatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def blockTag(self):
            return self.getTypedRuleContext(blendedParser.BlockTagContext,0)


        def endblockTag(self):
            return self.getTypedRuleContext(blendedParser.EndblockTagContext,0)


        def blendedBlock(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(blendedParser.BlendedBlockContext)
            else:
                return self.getTypedRuleContext(blendedParser.BlendedBlockContext,i)


        def getRuleIndex(self):
            return blendedParser.RULE_blockStatement

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitBlockStatement(self)




    def blockStatement(self):

        localctx = blendedParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blockStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.blockTag()
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 143
                    self.blendedBlock() 
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 149
            self.endblockTag()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExtendsStatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.ExtendsStatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LTAG(self):
            return self.getToken(blendedParser.LTAG, 0)

        def EXTENDS(self):
            return self.getToken(blendedParser.EXTENDS, 0)

        def RTAG(self):
            return self.getToken(blendedParser.RTAG, 0)

        def attributeVariable(self):
            return self.getTypedRuleContext(blendedParser.AttributeVariableContext,0)


        def pathString(self):
            return self.getTypedRuleContext(blendedParser.PathStringContext,0)


        def getRuleIndex(self):
            return blendedParser.RULE_extendsStatement

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterExtendsStatement(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitExtendsStatement(self)




    def extendsStatement(self):

        localctx = blendedParser.ExtendsStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_extendsStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(blendedParser.LTAG)
            self.state = 152
            self.match(blendedParser.EXTENDS)
            self.state = 155
            token = self._input.LA(1)
            if token in [blendedParser.ID, blendedParser.IN, blendedParser.AND, blendedParser.OR, blendedParser.NOT, blendedParser.IGNORE, blendedParser.WITH, blendedParser.ONLY, blendedParser.BLOCK, blendedParser.PARENT, blendedParser.ENDBLOCK, blendedParser.INCLUDE, blendedParser.EXTENDS, blendedParser.SET, blendedParser.PRINT, blendedParser.FOR, blendedParser.ENDFOR, blendedParser.MACRO, blendedParser.ENDMACRO, blendedParser.DO, blendedParser.IF, blendedParser.ELSE, blendedParser.ENDIF, blendedParser.ITEMS, blendedParser.COMMENT, blendedParser.ENDCOMMENT]:
                self.state = 153
                self.attributeVariable()

            elif token in [blendedParser.QUOTE, blendedParser.APO]:
                self.state = 154
                self.pathString()

            else:
                raise NoViableAltException(self)

            self.state = 157
            self.match(blendedParser.RTAG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentStatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.CommentStatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def commentTag(self):
            return self.getTypedRuleContext(blendedParser.CommentTagContext,0)


        def endcommentTag(self):
            return self.getTypedRuleContext(blendedParser.EndcommentTagContext,0)


        def blendedBlockParent(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(blendedParser.BlendedBlockParentContext)
            else:
                return self.getTypedRuleContext(blendedParser.BlendedBlockParentContext,i)


        def getRuleIndex(self):
            return blendedParser.RULE_commentStatement

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterCommentStatement(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitCommentStatement(self)




    def commentStatement(self):

        localctx = blendedParser.CommentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_commentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.commentTag()
            self.state = 163
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 160
                    self.blendedBlockParent() 
                self.state = 165
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 166
            self.endcommentTag()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComStatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.ComStatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LCOM(self):
            return self.getToken(blendedParser.LCOM, 0)

        def RCOM(self):
            return self.getToken(blendedParser.RCOM, 0)

        def getRuleIndex(self):
            return blendedParser.RULE_comStatement

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterComStatement(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitComStatement(self)




    def comStatement(self):

        localctx = blendedParser.ComStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(blendedParser.LCOM)
            self.state = 169
            self.match(blendedParser.RCOM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RawStatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(blendedParser.RawStatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def RAW(self):
            return self.getToken(blendedParser.RAW, 0)

        def ENDRAW(self):
            return self.getToken(blendedParser.ENDRAW, 0)

        def getRuleIndex(self):
            return blendedParser.RULE_rawStatement

        def enterRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.enterRawStatement(self)

        def exitRule(self, listener):
            if isinstance( listener, blendedParserListener ):
                listener.exitRawStatement(self)




    def rawStatement(self):

        localctx = blendedParser.RawStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_rawStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(blendedParser.RAW)
            self.state = 172
            self.match(blendedParser.ENDRAW)
        except RecognitionException as re:
            localctx.exception = re
